--- a/hw_css/LAB4_@keyframes.html
+++ b/hw_css/LAB4_@keyframes.html
@@ -41,7 +41,7 @@
                     margin : auto;
                     opacity: 0.2;
                     border:10px solid green;
-                    position: :absolute;
+                    
                 }
                 30% {
                     width: 100px;
@@ -49,8 +49,7 @@
                     margin : auto;
                     opacity: 0.2;
                     border:10px solid green;
-                    position: :absolute;
-                    visibility: hidden;
+                    position:absolute;
                 }
                 50% {
                     width : 150px;
@@ -71,7 +70,7 @@
         </style>
     </head>
     <body>
-        <div class="animation"  ></div>
+        <div class="animation" ></div>
         <br>
         <div class="animation2"></div>
     </body>
