edit CSS review1

--- a/hw_css/HW-CSS_review1.html
+++ b/hw_css/HW-CSS_review1.html
@@ -29,8 +29,8 @@
                 <td style="text-align: left;">Combinator ใน CSS มี 3 แบบ (ยกตัวอย่าง div p)
                 <li>div p คือ เลือก p ทั้งหมดใน div </li>
                 <li>div>p คือ เลือก p ทั้งหมดใน div เมื่อ parent เป็น div</li>
-                <li>div+p คือ เลือก p tag แรกใน div</li>
-                <li>div~ul คือ เลือก ul ทั้งหมดใน div</li>
+                <li>div+p คือ เลือก p tag แรกหลังจาก div</li>
+                <li>div~p คือ เลือก p ทั้งหมดหลังจาก div</li>
                 </td>
             </tr>
         </table><br>
