--- a/hw_javascript/ข้อที่ 6/index.html
+++ b/hw_javascript/ข้อที่ 6/index.html
@@ -3,17 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4</title>
+    <title>6</title>
 </head>
 <body>
     <script>
-        let a = 1,b = 1;
-        let c = ++a
-        let d = b++;
+        let = prompt
     </script>
 </body>
-    <div>
-        <p>a = 1 b = 1 c = ++a d = b++</p>
-        <p>a = 2 b =2 c = 2 d = 1 </p>   
-    </div>
 </html>
