basic javascript part 1 hw done

--- a/hw_javascript/ข้อที่ 6/6.1.html
+++ b/hw_javascript/ข้อที่ 6/6.1.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>6</title>
+    <title>6.1</title>
 </head>
 <body>
+    <p>Yes โชว์ครับ</p>
     <script>
-        let = prompt
+        if ("0") {
+            alert("Hello Codecamp #8")
+        }
     </script>
 </body>
 </html>
