--- a/hw_javascript/ข้อที่ 6/6.3.html
+++ b/hw_javascript/ข้อที่ 6/6.3.html
@@ -12,11 +12,11 @@
         score = Number(score)
         if (score >= 80) {
             alert("A");
-        } else if(score < 80 && score >= 70) {
+        } else if(score >= 70) {
             alert("B")
-        } else if(score < 70 && score >= 60) {
+        } else if(score >= 60) {
             alert("C")
-        } else if(score < 60 && score >= 50) {
+        } else if(score >= 50) {
             alert("D")
         } else {
             alert("F")
