edit hw3 new css

--- a/hw_css-new/homework3_Facebook/index.html
+++ b/hw_css-new/homework3_Facebook/index.html
@@ -147,7 +147,7 @@
         @media (max-width:850px) {
             .container {
                 flex-flow: column;
-                height: 100vh;
+                height: auto;
             }
             .left {
                 width: auto;
@@ -170,7 +170,7 @@
                 margin: 0 auto;
             }
             .create {
-                margin: 40px auto 0;
+                margin: 20px auto 20px;
             }
             .fcon {
                 width: 90%;
@@ -203,7 +203,7 @@
             <div class = "create"><a href="" style="text-decoration:none;">Create a Page</a> for a celebrity, band or business.</div>
         </div>
     </div>
-    <div class="footeer">
+    <div class="footer">
         <div class="fcon">
             <div class="language">
                 <div>English (UK)</div>
@@ -252,7 +252,6 @@
                 <div>AdChoices</div>
                 <div>Terms</div>
                 <div>Help</div>
-                <div>Settings</div>
             </div>
         </div>
     </div>
